[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov5"
version = "6.2.0"
description = "YOLOv5 Object Detection"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{name = "Ultralytics", email = "hello@ultralytics.com"}]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.22",
    "opencv-python>=4.6",
    "Pillow>=7.1",
    "psutil",
    "PyYAML>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "thop>=0.1.1",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.64.0",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "setuptools>=58.2.0"
]

[tool.setuptools]
packages = [
    "yolov5",
    "yolov5.models",
    "yolov5.utils",
    "yolov5.data",
    "yolov5.segment",
    "yolov5.classify"
]
